--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,12 +1,12 @@
 
-<div class="card " >
+<div class="card " style="width: 100%;">
   <div class="card-header"><h3 style="align-items: center; justify-content: center; display: flex;" class="card-title">Team</h3>
 
     <div class="container" style=>
     <div class="row" >
     <div class="card border border-info "  
     *ngFor="let name of manager" style="width: 24rem;
-    margin: 1%; height: 400px; overflow: hidden; ">
+    margin: 1%; height: 400px; overflow: hidden; flex-direction: column; ">
     
     <div class="container"
     style=" padding: 5%;" 
