--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,10 @@
           <a routerLink="/teams" 
           routerLinkActive="active" class="nav-link" href="#">Teams <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a routerLink="/audit" 
+          routerLinkActive="active" class="nav-link" href="#">Accounting Customer Audit <span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
   </nav>
